--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -18,7 +18,8 @@ RUN apt-get clean && apt-get update && apt-get install -y && \
     cd /root/gopath/src/github.com/potix/pdns-record-updater && glide update && go build && \
     curl -L https://github.com/gliderlabs/sigil/releases/download/v0.4.0/sigil_0.4.0_Linux_x86_64.tgz | tar -zxvC /usr/local/bin && \
     openssl req -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -subj /CN=localhost -keyout /etc/powerdns/pdns-record-updater-api-server.key -out /etc/powerdns/pdns-record-updater-api-server.cert && \
-    mkdir -p /etc/powerdns/static
+    mkdir -p /etc/powerdns && \
+    mkdir -p /var/www
 COPY pdns.conf.template /etc/powerdns/pdns.conf.template
 COPY pdns-record-updater-updater.yaml.template /etc/powerdns/pdns-record-updater-updater.yaml.template
 COPY pdns-record-updater-watcher.yaml.template /etc/powerdns/pdns-record-updater-watcher.yaml.template
@@ -34,7 +35,7 @@ RUN chmod 755 /usr/sbin/pdns-record-updater-run.sh
 #
 # pdns-record-updater-updater.yaml.template environment
 # ${WATCHER_API_SERVER_URL_LIST:?}
-# ${WATCHER_TLS_SKIP_VERIFY:-false}
+# ${WATCHER_API_SERVER_TLS_SKIP_VERIFY:-false}
 # ${WATCHER_API_SERVER_USERNAME:-}
 # ${WATCHER_API_SERVER_PASSWORD:-}
 # ${PDNS_API_KEY:-pdns_api_key}
@@ -50,6 +51,8 @@ RUN chmod 755 /usr/sbin/pdns-record-updater-run.sh
 # ${WATCHER_NOTIFY_SMTP_AUTH_TYPE:-plain}
 # ${WATCHER_NOTIFY_SMTP_USE_STARTTLS:-false}
 # ${WATCHER_NOTIFY_SMTP_USE_TLS:-false}
+# ${WATCHER_API_SERVER_CERT_FILE:-/etc/powerdns/pdns-record-updater-api-server.cert}
+# ${WATCHER_API_SERVER_PRIVATE_KEY_FILE:-/etc/powerdns/pdns-record-updater-api-server.key}
 # ${WATCHER_NOTIFY_SMTP_TLS_SKIP_VERIFY:-false}
 # ${WATCHER_API_SERVER_USE_TLS:-false}
 # ${WATCHER_API_SERVER_USERNAME:-}
