--- a/docker/base/pdns-record-updater-watcher.yaml.template
+++ b/docker/base/pdns-record-updater-watcher.yaml.template
@@ -17,11 +17,11 @@ apiServer:
   listenList:
   - addrPort: 0.0.0.0:28080
     useTls: ${WATCHER_API_SERVER_USE_TLS:-false}{{ if eq ${WATCHER_API_SERVER_USE_TLS:-false} true }}
-    certfile: /etc/powerdns/pdns-record-updater-api-server.cert 
-    keyfile: /etc/powerdns/pdns-record-updater-api-server.key{{ end }}
+    certfile: ${WATCHER_API_SERVER_CERT_FILE:-/etc/powerdns/pdns-record-updater-api-server.cert}
+    keyfile: ${WATCHER_API_SERVER_PRIVATE_KEY_FILE:-/etc/powerdns/pdns-record-updater-api-server.key}{{ end }}
   username: {{ if ne "${WATCHER_API_SERVER_USERNAME:-}" "" }} ${WATCHER_API_SERVER_USERNAME}{{ end }}
   password: {{ if ne "${WATCHER_API_SERVER_PASSWORD:-}" "" }} ${WATCHER_API_SERVER_PASSWORD}{{ end }}
-  staticPath: /etc/powerdns/static
+  staticPath: /var/www
 logger:
   loggers:
     default:
