--- a/docker/dockerfile/Makefile
+++ b/docker/dockerfile/Makefile
@@ -1,3 +1,4 @@
 version=0.1
 all:
-	docker build -t potix/pdns-record-updatea:$(version) .r
+	docker build -t potix/pdns-record-updater:$(version) .
+	docker push potix/pdns-record-updater
