--- a/docker/dockerfile/pdns-record-updater-watcher.yaml.template
+++ b/docker/dockerfile/pdns-record-updater-watcher.yaml.template
@@ -13,10 +13,10 @@ notifier:
     useTls: ${WATCHER_NOTIFY_SMTP_USE_TLS:-false}
     tlsSkipVerify: ${WATCHER_NOTIFY_SMTP_TLS_SKIP_VERIFY:-false} {{ end }}
 apiServer:
-  debug: true
+  debug: false
   listenList:
   - addrPort: 0.0.0.0:28001
-    useTls: ${WATCHER_API_SERVER_USE_TLS:-false}{{ if eq ${WATCHER_API_SERVER_USE_TLS:-false} true }}
+    useTls: ${WATCHER_API_SERVER_USE_TLS:-true}{{ if eq ${WATCHER_API_SERVER_USE_TLS:-true} true }}
     certfile: ${WATCHER_API_SERVER_CERT_FILE:-/etc/powerdns/pdns-record-updater-api-server.cert}
     keyfile: ${WATCHER_API_SERVER_PRIVATE_KEY_FILE:-/etc/powerdns/pdns-record-updater-api-server.key}{{ end }}
   username: {{ if ne "${WATCHER_API_SERVER_USERNAME:-}" "" }} ${WATCHER_API_SERVER_USERNAME}{{ end }}
