--- a/docker/dockerfile/Dockerfile
+++ b/docker/dockerfile/Dockerfile
@@ -13,9 +13,10 @@ RUN apt-get clean && apt-get update && apt-get install -y && \
     mkdir /root/gopath && \
     go get -u github.com/alecthomas/gometalinter && \
     cd /root && curl https://glide.sh/get | sh && rm -rf glide* && \
+    go get -u github.com/jteeuwen/go-bindata/...
     mkdir -p /root/gopath/src/github.com/potix && \
     cd /root/gopath/src/github.com/potix && git clone https://github.com/potix/pdns-record-updater && \
-    cd /root/gopath/src/github.com/potix/pdns-record-updater && glide update && go build && \
+    cd /root/gopath/src/github.com/potix/pdns-record-updater && make \
     curl -L https://github.com/gliderlabs/sigil/releases/download/v0.4.0/sigil_0.4.0_Linux_x86_64.tgz | tar -zxvC /usr/local/bin && \
     openssl req -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -subj /CN=localhost -keyout /etc/powerdns/pdns-record-updater-api-server.key -out /etc/powerdns/pdns-record-updater-api-server.cert && \
     mkdir -p /etc/powerdns && \
